--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="col">
         <h1>Christo K</h1>
         <h6>
-          Hi im here <br />
+          Hi im here! <br />
           im a front-end devolper"I'm a frontend developer with a passion for
           crafting intuitive and visually appealing user experiences. Skilled in
           HTML, CSS, and JavaScript, I create responsive and accessible
